// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<span
  className="check"
  style={undefined}
>
  <input
    checked={undefined}
    className="native"
    defaultChecked={undefined}
    disabled={false}
    id="_teatime1"
    name="control"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
    value="on"
  />
  <label
    className="control"
    htmlFor="_teatime1"
  />
  <label
    className="label"
    htmlFor="_teatime1"
  >
    I Agree
  </label>
</span>
`;

exports[`Renders correctly with defined props 1`] = `
<span
  className="check outer"
  style={undefined}
>
  <input
    checked={true}
    className="native"
    defaultChecked={undefined}
    disabled={true}
    id="controls-id"
    name="control"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
    value="controls value"
  />
  <label
    className="control"
    htmlFor="controls-id"
  />
  <label
    className="label"
    htmlFor="controls-id"
  >
    Make Awesome!
  </label>
</span>
`;
